--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(chrom_vis)
 export(ncbi_genome_metadata)
 export(ncbi_genome_stats)
 export(run_app)
+export(species_donut)
+import(dplyr)
 import(echarts4r)
 import(leaflet)
 import(shiny)
