--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,22 @@ export("%>%")
 export(chrom_vis)
 export(ncbi_genome_metadata)
 export(ncbi_genome_stats)
+export(ncbi_genome_stats_and_metadata)
 export(run_app)
 export(species_donut)
+export(tax_tree)
 import(dplyr)
 import(echarts4r)
 import(leaflet)
 import(shiny)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(echarts4r,renderEcharts4r)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
@@ -23,5 +29,8 @@ importFrom(golem,with_golem_options)
 importFrom(magrittr,"%>%")
 importFrom(rentrez,entrez_search)
 importFrom(rentrez,entrez_summary)
+importFrom(rotl,tnrs_match_names)
+importFrom(rotl,tol_induced_subtree)
+importFrom(rotl,tol_node_info)
 importFrom(shiny,shinyApp)
 importFrom(taxize,get_uid)
