fixing bug with api key

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(golem,with_golem_options)
 importFrom(magrittr,"%>%")
 importFrom(rentrez,entrez_search)
 importFrom(rentrez,entrez_summary)
+importFrom(rentrez,set_entrez_key)
 importFrom(rotl,tnrs_match_names)
 importFrom(rotl,tol_induced_subtree)
 importFrom(rotl,tol_node_info)
