--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(ncbi_genome_stats_and_metadata)
 export(run_app)
 export(species_donut)
 export(tax_tree)
+import(bslib)
 import(dplyr)
 import(echarts4r)
+import(ggiraph)
 import(leaflet)
 import(shiny)
 importFrom(dplyr,bind_rows)
