housekeeping and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,25 @@
 
 export("%>%")
 export(chrom_vis)
+export(expand_chr_names)
 export(ncbi_genome_metadata)
 export(ncbi_genome_stats)
 export(ncbi_genome_stats_and_metadata)
+export(plot_mapping)
 export(run_app)
 export(species_donut)
 export(tax_tree)
 import(bslib)
 import(dplyr)
 import(echarts4r)
+import(ggalluvial)
 import(ggiraph)
+import(ggplot2)
 import(leaflet)
 import(shiny)
+import(tidyr)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
@@ -36,4 +42,6 @@ importFrom(rotl,tnrs_match_names)
 importFrom(rotl,tol_induced_subtree)
 importFrom(rotl,tol_node_info)
 importFrom(shiny,shinyApp)
+importFrom(stringr,str_remove)
+importFrom(stringr,str_sort)
 importFrom(taxize,get_uid)
